// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopSearchBar component renders as expected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TopSearchBar
    showClearIcon={0}
    updateRecipesSearchInputText={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": <Search
        clearIcon={undefined}
        containerStyle={
          Object {
            "backgroundColor": "#81b640",
            "borderBottomWidth": 0,
            "borderTopWidth": 0,
            "flex": 1,
          }
        }
        icon={
          Object {
            "color": "rgba(255, 255, 255, 0.3)",
            "name": "search",
          }
        }
        inputStyle={
          Object {
            "backgroundColor": "#508607",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Avenir",
          }
        }
        lightTheme={true}
        loadingIcon={Object {}}
        noIcon={false}
        onChangeText={[Function]}
        placeholder="Search"
        placeholderTextColor="rgba(255, 255, 255, 0.3)"
        round={true}
        selectionColor="rgba(255, 255, 255, 1.0)"
        showLoadingIcon={false}
      />,
      "style": Object {
        "backgroundColor": "#81b640",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "clearIcon": undefined,
        "containerStyle": Object {
          "backgroundColor": "#81b640",
          "borderBottomWidth": 0,
          "borderTopWidth": 0,
          "flex": 1,
        },
        "icon": Object {
          "color": "rgba(255, 255, 255, 0.3)",
          "name": "search",
        },
        "inputStyle": Object {
          "backgroundColor": "#508607",
          "color": "rgba(255, 255, 255, 1.0)",
          "fontFamily": "Avenir",
        },
        "lightTheme": true,
        "loadingIcon": Object {},
        "noIcon": false,
        "onChangeText": [Function],
        "placeholder": "Search",
        "placeholderTextColor": "rgba(255, 255, 255, 0.3)",
        "round": true,
        "selectionColor": "rgba(255, 255, 255, 1.0)",
        "showLoadingIcon": false,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": <Search
          clearIcon={undefined}
          containerStyle={
            Object {
              "backgroundColor": "#81b640",
              "borderBottomWidth": 0,
              "borderTopWidth": 0,
              "flex": 1,
            }
          }
          icon={
            Object {
              "color": "rgba(255, 255, 255, 0.3)",
              "name": "search",
            }
          }
          inputStyle={
            Object {
              "backgroundColor": "#508607",
              "color": "rgba(255, 255, 255, 1.0)",
              "fontFamily": "Avenir",
            }
          }
          lightTheme={true}
          loadingIcon={Object {}}
          noIcon={false}
          onChangeText={[Function]}
          placeholder="Search"
          placeholderTextColor="rgba(255, 255, 255, 0.3)"
          round={true}
          selectionColor="rgba(255, 255, 255, 1.0)"
          showLoadingIcon={false}
        />,
        "style": Object {
          "backgroundColor": "#81b640",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "clearIcon": undefined,
          "containerStyle": Object {
            "backgroundColor": "#81b640",
            "borderBottomWidth": 0,
            "borderTopWidth": 0,
            "flex": 1,
          },
          "icon": Object {
            "color": "rgba(255, 255, 255, 0.3)",
            "name": "search",
          },
          "inputStyle": Object {
            "backgroundColor": "#508607",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Avenir",
          },
          "lightTheme": true,
          "loadingIcon": Object {},
          "noIcon": false,
          "onChangeText": [Function],
          "placeholder": "Search",
          "placeholderTextColor": "rgba(255, 255, 255, 0.3)",
          "round": true,
          "selectionColor": "rgba(255, 255, 255, 1.0)",
          "showLoadingIcon": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
  },
}
`;

exports[`TopSearchBar component renders as expected with clear icon when there is some text 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TopSearchBar
    showClearIcon={5}
    updateRecipesSearchInputText={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": <Search
        clearIcon={
          Object {
            "color": "rgba(255, 255, 255, 0.3)",
            "name": "clear",
          }
        }
        containerStyle={
          Object {
            "backgroundColor": "#81b640",
            "borderBottomWidth": 0,
            "borderTopWidth": 0,
            "flex": 1,
          }
        }
        icon={
          Object {
            "color": "rgba(255, 255, 255, 0.3)",
            "name": "search",
          }
        }
        inputStyle={
          Object {
            "backgroundColor": "#508607",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Avenir",
          }
        }
        lightTheme={true}
        loadingIcon={Object {}}
        noIcon={false}
        onChangeText={[Function]}
        placeholder="Search"
        placeholderTextColor="rgba(255, 255, 255, 0.3)"
        round={true}
        selectionColor="rgba(255, 255, 255, 1.0)"
        showLoadingIcon={false}
      />,
      "style": Object {
        "backgroundColor": "#81b640",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "clearIcon": Object {
          "color": "rgba(255, 255, 255, 0.3)",
          "name": "clear",
        },
        "containerStyle": Object {
          "backgroundColor": "#81b640",
          "borderBottomWidth": 0,
          "borderTopWidth": 0,
          "flex": 1,
        },
        "icon": Object {
          "color": "rgba(255, 255, 255, 0.3)",
          "name": "search",
        },
        "inputStyle": Object {
          "backgroundColor": "#508607",
          "color": "rgba(255, 255, 255, 1.0)",
          "fontFamily": "Avenir",
        },
        "lightTheme": true,
        "loadingIcon": Object {},
        "noIcon": false,
        "onChangeText": [Function],
        "placeholder": "Search",
        "placeholderTextColor": "rgba(255, 255, 255, 0.3)",
        "round": true,
        "selectionColor": "rgba(255, 255, 255, 1.0)",
        "showLoadingIcon": false,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": <Search
          clearIcon={
            Object {
              "color": "rgba(255, 255, 255, 0.3)",
              "name": "clear",
            }
          }
          containerStyle={
            Object {
              "backgroundColor": "#81b640",
              "borderBottomWidth": 0,
              "borderTopWidth": 0,
              "flex": 1,
            }
          }
          icon={
            Object {
              "color": "rgba(255, 255, 255, 0.3)",
              "name": "search",
            }
          }
          inputStyle={
            Object {
              "backgroundColor": "#508607",
              "color": "rgba(255, 255, 255, 1.0)",
              "fontFamily": "Avenir",
            }
          }
          lightTheme={true}
          loadingIcon={Object {}}
          noIcon={false}
          onChangeText={[Function]}
          placeholder="Search"
          placeholderTextColor="rgba(255, 255, 255, 0.3)"
          round={true}
          selectionColor="rgba(255, 255, 255, 1.0)"
          showLoadingIcon={false}
        />,
        "style": Object {
          "backgroundColor": "#81b640",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "clearIcon": Object {
            "color": "rgba(255, 255, 255, 0.3)",
            "name": "clear",
          },
          "containerStyle": Object {
            "backgroundColor": "#81b640",
            "borderBottomWidth": 0,
            "borderTopWidth": 0,
            "flex": 1,
          },
          "icon": Object {
            "color": "rgba(255, 255, 255, 0.3)",
            "name": "search",
          },
          "inputStyle": Object {
            "backgroundColor": "#508607",
            "color": "rgba(255, 255, 255, 1.0)",
            "fontFamily": "Avenir",
          },
          "lightTheme": true,
          "loadingIcon": Object {},
          "noIcon": false,
          "onChangeText": [Function],
          "placeholder": "Search",
          "placeholderTextColor": "rgba(255, 255, 255, 0.3)",
          "round": true,
          "selectionColor": "rgba(255, 255, 255, 1.0)",
          "showLoadingIcon": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
    },
  },
}
`;
